--- a/Crime Project/Plotting Graphs.ipynb
+++ b/Crime Project/Plotting Graphs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "1ce4f138",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "7a216b13",
    "metadata": {
     "scrolled": false
@@ -229,7 +229,7 @@
        "[176735 rows x 7 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "e2eaa185",
    "metadata": {
     "scrolled": true
@@ -1405,7 +1405,7 @@
        "158   100                Migrated report - criminal homicide            1"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "45066d85",
    "metadata": {
     "scrolled": true
@@ -1550,7 +1550,7 @@
        "[1000 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "de79fee6",
    "metadata": {
     "scrolled": true
@@ -1678,7 +1678,7 @@
        "[976 rows x 2 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "82a84188",
    "metadata": {
     "scrolled": true
@@ -1806,7 +1806,7 @@
        "[862 rows x 2 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "821f261f",
    "metadata": {
     "scrolled": true
@@ -1934,7 +1934,7 @@
        "[948 rows x 2 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "id": "c298b187",
    "metadata": {
     "scrolled": true
@@ -2094,7 +2094,7 @@
        "[825 rows x 4 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "ba0e5c81",
    "metadata": {
     "scrolled": true
@@ -2258,7 +2258,7 @@
        "[816 rows x 4 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2278,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "a24b1912",
    "metadata": {},
    "outputs": [
@@ -2288,7 +2288,7 @@
        "Text(0, 0.5, 'Crime Incidents')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2322,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "c6bc6d0c",
    "metadata": {},
    "outputs": [],
@@ -2349,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "330aeec7",
    "metadata": {},
    "outputs": [
@@ -2468,7 +2468,7 @@
        "[3786 rows x 3 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2481,6 +2481,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f6c18d57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SPlot_df.to_csv('Scatterplot.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "168ca206",
    "metadata": {},
@@ -2490,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "id": "375e928d",
    "metadata": {},
    "outputs": [
@@ -2500,7 +2510,7 @@
        "<AxesSubplot:xlabel='Date', ylabel='Count'>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
