--- a/Crime Project/Data Cleaning.ipynb
+++ b/Crime Project/Data Cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "029059d0",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bce3e30d",
    "metadata": {
     "scrolled": true
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "25acfe92",
    "metadata": {
     "scrolled": false
@@ -282,7 +282,7 @@
        "4      (42.28482576580488, -71.09137368938802)  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "30fca9ef",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9d7456b5",
    "metadata": {
     "scrolled": false
@@ -511,7 +511,7 @@
        "4      -71.09137368938802  (42.28482576580488, -71.09137368938802)  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "33bf1c6f",
    "metadata": {
     "scrolled": true
@@ -735,7 +735,7 @@
        "4      (42.341287504390436, -71.05467932649397)  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ff08c1ee",
    "metadata": {
     "scrolled": true
@@ -959,7 +959,7 @@
        "4      (42.3618385665647, -71.0597648909416)  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "440f86e3",
    "metadata": {
     "scrolled": true
@@ -1183,7 +1183,7 @@
        "4                       0                                    (0, 0)  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "38115da7",
    "metadata": {
     "scrolled": true
@@ -1232,6 +1232,7 @@
        "      <th>Code</th>\n",
        "      <th>Offense</th>\n",
        "      <th>Date</th>\n",
+       "      <th>Street</th>\n",
        "      <th>Year</th>\n",
        "      <th>Month</th>\n",
        "      <th>Lat</th>\n",
@@ -1244,6 +1245,7 @@
        "      <td>520</td>\n",
        "      <td>BURGLARY - RESIDENTIAL</td>\n",
        "      <td>2021-10-13</td>\n",
+       "      <td>SCHROEDER PLZ</td>\n",
        "      <td>2021</td>\n",
        "      <td>10</td>\n",
        "      <td>42.33367921810846</td>\n",
@@ -1254,6 +1256,7 @@
        "      <td>3114</td>\n",
        "      <td>INVESTIGATE PROPERTY</td>\n",
        "      <td>2021-05-12</td>\n",
+       "      <td>SCHROEDER PLZ</td>\n",
        "      <td>2021</td>\n",
        "      <td>5</td>\n",
        "      <td>42.33367921810846</td>\n",
@@ -1264,6 +1267,7 @@
        "      <td>3114</td>\n",
        "      <td>INVESTIGATE PROPERTY</td>\n",
        "      <td>2021-05-12</td>\n",
+       "      <td>SCHROEDER PLZ</td>\n",
        "      <td>2021</td>\n",
        "      <td>5</td>\n",
        "      <td>42.33367921810846</td>\n",
@@ -1274,6 +1278,7 @@
        "      <td>3201</td>\n",
        "      <td>PROPERTY - LOST/ MISSING</td>\n",
        "      <td>2021-03-22</td>\n",
+       "      <td>BLUE HILL AVE</td>\n",
        "      <td>2021</td>\n",
        "      <td>3</td>\n",
        "      <td>42.28482576580488</td>\n",
@@ -1284,6 +1289,7 @@
        "      <td>3301</td>\n",
        "      <td>VERBAL DISPUTE</td>\n",
        "      <td>2021-07-28</td>\n",
+       "      <td>LYON ST</td>\n",
        "      <td>2021</td>\n",
        "      <td>7</td>\n",
        "      <td>42.30638322801941</td>\n",
@@ -1298,12 +1304,14 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>176730</th>\n",
        "      <td>111</td>\n",
        "      <td>MURDER, NON-NEGLIGENT MANSLAUGHTER</td>\n",
        "      <td>2022-04-11</td>\n",
+       "      <td>ORCHARD PARK ST</td>\n",
        "      <td>2022</td>\n",
        "      <td>4</td>\n",
        "      <td>42.3295</td>\n",
@@ -1314,6 +1322,7 @@
        "      <td>3114</td>\n",
        "      <td>INVESTIGATE PROPERTY</td>\n",
        "      <td>2022-04-11</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
        "      <td>2022</td>\n",
        "      <td>4</td>\n",
        "      <td>42.286882</td>\n",
@@ -1324,6 +1333,7 @@
        "      <td>3831</td>\n",
        "      <td>M/V - LEAVING SCENE - PROPERTY DAMAGE</td>\n",
        "      <td>2022-04-11</td>\n",
+       "      <td>POPLAR ST</td>\n",
        "      <td>2022</td>\n",
        "      <td>4</td>\n",
        "      <td>42.274381</td>\n",
@@ -1334,6 +1344,7 @@
        "      <td>3110</td>\n",
        "      <td>SERVICE TO OTHER AGENCY</td>\n",
        "      <td>2022-01-02</td>\n",
+       "      <td>WASHINGTON ST &amp; ROXBURY ST\\nBOSTON  MA 02119\\n...</td>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>42.3296</td>\n",
@@ -1344,6 +1355,7 @@
        "      <td>3115</td>\n",
        "      <td>INVESTIGATE PERSON</td>\n",
        "      <td>2022-01-19</td>\n",
+       "      <td>HEATH ST</td>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>42.325131</td>\n",
@@ -1351,22 +1363,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>176735 rows × 7 columns</p>\n",
+       "<p>176735 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Code                                Offense       Date  Year Month  \\\n",
-       "0        520                 BURGLARY - RESIDENTIAL 2021-10-13  2021    10   \n",
-       "1       3114                   INVESTIGATE PROPERTY 2021-05-12  2021     5   \n",
-       "2       3114                   INVESTIGATE PROPERTY 2021-05-12  2021     5   \n",
-       "3       3201               PROPERTY - LOST/ MISSING 2021-03-22  2021     3   \n",
-       "4       3301                         VERBAL DISPUTE 2021-07-28  2021     7   \n",
-       "...      ...                                    ...        ...   ...   ...   \n",
-       "176730   111     MURDER, NON-NEGLIGENT MANSLAUGHTER 2022-04-11  2022     4   \n",
-       "176731  3114                   INVESTIGATE PROPERTY 2022-04-11  2022     4   \n",
-       "176732  3831  M/V - LEAVING SCENE - PROPERTY DAMAGE 2022-04-11  2022     4   \n",
-       "176733  3110                SERVICE TO OTHER AGENCY 2022-01-02  2022     1   \n",
-       "176734  3115                     INVESTIGATE PERSON 2022-01-19  2022     1   \n",
+       "        Code                                Offense       Date  \\\n",
+       "0        520                 BURGLARY - RESIDENTIAL 2021-10-13   \n",
+       "1       3114                   INVESTIGATE PROPERTY 2021-05-12   \n",
+       "2       3114                   INVESTIGATE PROPERTY 2021-05-12   \n",
+       "3       3201               PROPERTY - LOST/ MISSING 2021-03-22   \n",
+       "4       3301                         VERBAL DISPUTE 2021-07-28   \n",
+       "...      ...                                    ...        ...   \n",
+       "176730   111     MURDER, NON-NEGLIGENT MANSLAUGHTER 2022-04-11   \n",
+       "176731  3114                   INVESTIGATE PROPERTY 2022-04-11   \n",
+       "176732  3831  M/V - LEAVING SCENE - PROPERTY DAMAGE 2022-04-11   \n",
+       "176733  3110                SERVICE TO OTHER AGENCY 2022-01-02   \n",
+       "176734  3115                     INVESTIGATE PERSON 2022-01-19   \n",
+       "\n",
+       "                                                   Street  Year Month  \\\n",
+       "0                                           SCHROEDER PLZ  2021    10   \n",
+       "1                                           SCHROEDER PLZ  2021     5   \n",
+       "2                                           SCHROEDER PLZ  2021     5   \n",
+       "3                                           BLUE HILL AVE  2021     3   \n",
+       "4                                                 LYON ST  2021     7   \n",
+       "...                                                   ...   ...   ...   \n",
+       "176730                                    ORCHARD PARK ST  2022     4   \n",
+       "176731                                      WASHINGTON ST  2022     4   \n",
+       "176732                                          POPLAR ST  2022     4   \n",
+       "176733  WASHINGTON ST & ROXBURY ST\\nBOSTON  MA 02119\\n...  2022     1   \n",
+       "176734                                           HEATH ST  2022     1   \n",
        "\n",
        "                      Lat                Long  \n",
        "0       42.33367921810846  -71.09187754618458  \n",
@@ -1381,29 +1406,29 @@
        "176733            42.3296           -71.08462  \n",
        "176734          42.325131          -71.099408  \n",
        "\n",
-       "[176735 rows x 7 columns]"
+       "[176735 rows x 8 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query = '''\n",
-    "SELECT Code, Offense, Date, Year, Month, Lat, Long\n",
+    "SELECT Code, Offense, Date, Street, Year, Month, Lat, Long\n",
     "FROM df_19\n",
     "WHERE Lat <> 0 AND Code NOT IN (612, 99999, 1501, 3125)\n",
     "UNION ALL\n",
-    "SELECT Code, Offense, Date, Year, Month, Lat, Long\n",
+    "SELECT Code, Offense, Date, Street, Year, Month, Lat, Long\n",
     "FROM df_20\n",
     "WHERE Lat <> 0 AND Code NOT IN (612, 99999, 1501, 3125)\n",
     "UNION ALL\n",
-    "SELECT Code, Offense, Date, Year, Month, Lat, Long\n",
+    "SELECT Code, Offense, Date, Street, Year, Month, Lat, Long\n",
     "FROM df_21\n",
     "WHERE Lat <> 0 AND Code NOT IN (612, 99999, 1501, 3125)\n",
     "UNION ALL\n",
-    "SELECT Code, Offense, Date, Year, Month, Lat, Long\n",
+    "SELECT Code, Offense, Date, Street, Year, Month, Lat, Long\n",
     "FROM df_22\n",
     "WHERE Lat <> 0 AND Code NOT IN (612, 99999, 1501, 3125)\n",
     "ORDER BY Year DESC\n",
@@ -1415,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "77122bd0",
    "metadata": {},
    "outputs": [
@@ -1425,18 +1450,19 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 176735 entries, 0 to 176734\n",
-      "Data columns (total 7 columns):\n",
+      "Data columns (total 8 columns):\n",
       " #   Column   Non-Null Count   Dtype         \n",
       "---  ------   --------------   -----         \n",
       " 0   Code     176735 non-null  int32         \n",
       " 1   Offense  176735 non-null  string        \n",
       " 2   Date     176735 non-null  datetime64[ns]\n",
-      " 3   Year     176735 non-null  int32         \n",
-      " 4   Month    176735 non-null  int32         \n",
-      " 5   Lat      176735 non-null  float64       \n",
-      " 6   Long     176735 non-null  float64       \n",
-      "dtypes: datetime64[ns](1), float64(2), int32(3), string(1)\n",
-      "memory usage: 7.4 MB\n"
+      " 3   Street   176061 non-null  object        \n",
+      " 4   Year     176735 non-null  int32         \n",
+      " 5   Month    176735 non-null  int32         \n",
+      " 6   Lat      176735 non-null  float64       \n",
+      " 7   Long     176735 non-null  float64       \n",
+      "dtypes: datetime64[ns](1), float64(2), int32(3), object(1), string(1)\n",
+      "memory usage: 8.8+ MB\n"
      ]
     }
    ],
@@ -1456,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "296a62a5",
    "metadata": {},
    "outputs": [],
@@ -1466,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b98e3dc6",
    "metadata": {},
    "outputs": [
@@ -2458,7 +2484,7 @@
        "158  3831              M/v - leaving scene - property damage"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2482,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ac367614",
    "metadata": {},
    "outputs": [],
